# study-cmocka

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
test/: test_main.c
